--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://gitlab.com/puzzleduck/rockingham-node#README",
   "dependencies": {
+    "request": "^2.79.0",
     "sqlite3": "^3.1.8"
   }
 }
